# RoboTwin

./: .gitignore  README.md  Singularity  collect_data.sh  pyproject.toml
docs/: DATASET_USAGE.md  SINGLE_ARM_TASKS copy.md  SINGLE_ARM_TASKS.md
scripts/: batch_preprepare_data.sh  build_sif.sh  collect_data.sh  distrobox-setup.sh  generate_single_arm_demos.sh  preprepare_data.py
src/robotwin/assets/: _download.py
src/robotwin/code_gen/: __init__.py  observation_agent.py  prompt.py  run_code.py  task_generation.py  task_generation_mm.py  task_generation_simple.py  test_gen_code.py
src/robotwin/description/utils/: agent.py  clear_task_seen_unseen.py  convert_obj_glb.py  generate_episode_instructions.py  generate_object_description.py  generate_task_description.py  get_image_from_glb.py
src/robotwin/envs/: _GLOBAL_CONFIGS.py  _base_task.py  adjust_bottle.py  beat_block_hammer.py  blocks_ranking_rgb.py  blocks_ranking_size.py  click_alarmclock.py  click_bell.py  dump_bin_bigbin.py  grab_roller.py  handover_block.py  handover_mic.py  hanging_mug.py  lift_pot.py  move_can_pot.py  move_pillbottle_pad.py  move_playingcard_away.py  move_stapler_pad.py  open_laptop.py  open_microwave.py  pick_diverse_bottles.py  pick_dual_bottles.py  place_a2b_left.py  place_a2b_right.py  place_bread_basket.py  place_bread_skillet.py  place_burger_fries.py  place_can_basket.py  place_cans_plasticbox.py  place_container_plate.py  place_dual_shoes.py  place_empty_cup.py  place_fan.py  place_mouse_pad.py  place_object_basket.py  place_object_scale.py  place_object_stand.py  place_phone_stand.py  place_shoe.py  press_stapler.py  (+12 more)
src/robotwin/envs/camera/: camera.py
src/robotwin/envs/robot/: __init__.py  planner.py  robot.py
src/robotwin/envs/utils/: __init__.py  action.py  actor_utils.py  create_actor.py  get_camera_config.py  images_to_video.py  parse_hdf5.py  pkl2hdf5.py  rand_create_actor.py  rand_create_cluttered_actor.py  save_file.py  transforms.py
src/robotwin/policy/ACT/: act_policy.py  constants.py  deploy_policy.py  ee_sim_env.py  imitate_episodes.py  process_data.py  record_sim_episodes.py  scripted_policy.py  sim_env.py  utils.py  visualize_episodes.py
src/robotwin/policy/DP/: deploy_policy.py  deploy_policy_double_env.py  dp_model.py  process_data.py  train.py
src/robotwin/policy/DP3/: deploy_policy.py
src/robotwin/policy/DexVLA/: deploy_policy.py  main.py  process_data.py  qwen2_vl_inference.py  setup.py  torch_utils.py  train_vla.py
src/robotwin/policy/GO1/: deploy_policy.py
src/robotwin/policy/InstantPolicy/: debug_viz.py  deploy_policy.py  deploy_policy.yml  eval.sh  instant_policy_utils.py
src/robotwin/script/: add_annotation.py  collect_data.py  create_messy_data.py  create_object_data.py  eval_policy.py  eval_policy_client.py  policy_model_server.py  process_stuck.py  test_render.py  update_embodiment_config_path.py  view_pkl_trajectory.py
src/robotwin/task_config/: _camera_config.yml  _embodiment_config.yml  single_arm_data_gen.yml
(+198 files in other folders)
