[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotwin"
version = "0.1.0"
description = "RoboTwin: Dual-Arm Robot Benchmark with Generative Digital Twins"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "RoboTwin Team" }
]
dependencies = [
    "torch>=2.4.1",
    "torchvision",
    "transforms3d>=0.4.2",
    "sapien>=3.0.0b1",
    "scipy>=1.10.1",
    "mplib>=0.2.1",
    "gymnasium>=0.29.1",
    "trimesh>=4.4.3",
    "open3d>=0.18.0",
    "imageio>=2.34.2",
    "pydantic",
    "zarr",
    "openai",
    "huggingface_hub>=0.25.0",
    "h5py",
    "azure>=4.0.0",
    "azure-ai-inference",
    "pyglet<2",
    "wandb",
    "moviepy",
    "termcolor",
    "av",
    "matplotlib",
    "ffmpeg-python",
    "hydra-core",
    "omegaconf",
    "PyYAML",
    "dill",
    "einops",
    "diffusers",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable",
    "nvidia-curobo @ git+https://github.com/NVlabs/curobo.git"
]

[tool.hatch.build.targets.wheel]
packages = ["src/robotwin"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = []

[tool.uv.extra-build-dependencies]
pytorch3d = ["torch"]
